# integration-kodi

./: .dockerignore  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  driver.json  pyproject.toml  requirements.txt  test-driver-requirements.txt  test-requirements.txt  test_connection.py  test_driver.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: build.yml  python-code-format.yml
docker/: Dockerfile  docker-compose.yml
docs/: code_guidelines.md  licenses.md
intg-kodi/: config.py  const.py  discover.py  driver.py  kodi.py  media_player.py  remote.py  setup_flow.py  test.py  test_connection.py
intg-kodi/pykodi/: __init__.py  kodi.py
src/: config.py  const.py  discover.py  driver.py  favorites.py  kodi.py  kodi_device.py  languages.py  media_browser.py  media_player.py  remote.py  selector.py  sensor.py  setup_fields.py  setup_flow.py  test_connection.py  test_driver.py  translations.py  ucapi-0.1.dev99+g110d147bd.d20260204-py3-none-any.whl  ucapi-0.5.3.dev11+g4c16fbf3b.d20260319-py3-none-any.whl  ucapi-0.5.3.dev11+ge80291de2.d20260204-py3-none-any.whl  ucapi-0.5.3.dev12+gd11cfea3f.d20260321-py3-none-any.whl  ucapi-0.5.3.dev14+g4a413fc34.d20260214-py3-none-any.whl  ucapi-0.5.3.dev2+g55b4c4524.d20260305-py3-none-any.whl  ucapi-0.5.3.dev3+g5140403ea.d20260308-py3-none-any.whl  ucapi-0.5.3.dev3+g5140403ea.d20260311-py3-none-any.whl  ucapi-0.5.3.dev4+gd4b2dacd9.d20260401-py3-none-any.whl  ucapi-0.5.3.dev5+g40e7957a0.d20260201-py3-none-any.whl  ucapi-0.5.3.dev5+ge55a4b473.d20260319-py3-none-any.whl  ucapi-0.5.4.dev3+geb80630e7.d20260201-py3-none-any.whl
src/convIso639/: language.py
src/iso639/: language.py
src/iso639/_data/: __init__.py
src/pykodi/: kodi.py
tools/: scan_uc.py  transform-pip-licenses.js
tools/templates/: licenses-header.md
