# TODO this is work in progress
[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "intg-kodi"
version = "0.2.4"
authors = [
    { name = "Albator", email = "albaintor@github.com" }
]
license = { text = "MPL-2.0" }
description = "Remote Two integration for Sony AVRs"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "pyee>=12.0.0",
    "ucapi==0.3.1",
]

[project.readme]
file = "README.md"
content-type = "text/markdown; charset=UTF-8"

[project.optional-dependencies]
testing = [
    "pylint",
    "flake8-docstrings",
    "flake8",
    "black",
    "isort",
]

[tool.setuptools]
platforms = ["any"]
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["tests"]
namespaces = false

[tool.isort]
profile = "black"
